@@ -21,4 +21,6 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
     args "--android", "-F", "src/**/*.kt"
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
